--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/prefabs/Launcher.js"></script>
-    <script src="./src/prefabs/Rocket.js"></script>
-    <script src="./src/prefabs/Spaceship.js"></script>
+    <script src="./src/prefabs/Hamster.js"></script>
+    <script src="./src/prefabs/Wheel.js"></script>
+    <script src="./src/scenes/Load.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/main.js"></script>
