--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Hamster.js"></script>
     <script src="./src/prefabs/Wheel.js"></script>
+    <script src="./src/prefabs/Wedge.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge1.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge2.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge3.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge4.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge5.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge6.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge7.js"></script>
+    <script src="./src/prefabs/Wedges/Wedge8.js"></script>
+    <script src="./src/prefabs/Wedges/Lava.js"></script>
+    <script src="./src/prefabs/Wedges/Platform.js"></script>
     <script src="./src/scenes/Load.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
+    <script src="./src/scenes/GameOver.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
