the fonts didnt work ok

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         body {
             background-color: beige;
         }
+        @font-face {
+            font-family: "Source Code Pro";
+            src: url('./assets/font.ttf');
+        }
     </style>
+    <div style="font-family:Source Code Pro; position: absolute; left:-1000px; visibility:hidden;">.</div>
 </head>
 <body>
     <script src="./lib/phaser.js"></script>
