--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol</title>
+    <title>This Game Really Makes You Feel Like A Hamster</title>
     <style>
         body {
             background-color: beige;
